extends CanvasLayer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	pass


func _on_button_pressed() -> void:
	queue_free()
	pass # Replace with function body.


func _on_home_pressed() -> void:
	get_tree().reload_current_scene()
	pass # Replace with function body.


func _on_try_again_pressed() -> void:
	get_tree().reload_current_scene()
	pass # Replace with function body.
